--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,41 @@
 name: ci-test
 
+
 on:
+  workflow_dispatch:
+    inputs:
+      ALLURE_JOB_RUN_ID:
+        description: ALLURE_JOB_RUN_ID service parameter. Leave blank.
+      ALLURE_USERNAME:
+        description: ALLURE_USERNAME service parameter. Leave blank.
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
+env:
+  ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
+  ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
+  ALLURE_ENDPOINT: https://test1.testops.cloud/
+  ALLURE_PROJECT_ID: 2
+  ALLURE_RESULTS: build/allure-results
 
 jobs:
   build-windows:
@@ -20,9 +51,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
         pip install -e .
+    - name: Install allurectl
+      uses: allure-framework/setup-allurectl@v1
     - name: Testing
       run: |
-        python -m pytest tests
+        allurectl watch -- python -m pytest tests
 
   build-linux:
     runs-on: ubuntu-latest
@@ -37,9 +70,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
         pip install -e .
+    - name: Install allurectl
+      uses: allure-framework/setup-allurectl@v1
     - name: Testing
       run: |
-        python -m pytest --cov=fastvector tests
+        allurectl watch -- python -m pytest --cov=fastvector tests
         python -m codecov
 
   build-macos:
@@ -55,6 +90,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
         pip install -e .
+    - name: Install allurectl
+      uses: allure-framework/setup-allurectl@v1
     - name: Testing
       run: |
-        python -m pytest tests
+        allurectl watch -- python -m pytest tests
+        
