--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Testing
       run: |
         python -m pytest tests
+        python -m pytest --alluredir allure-results --clean-alluredir
         allurectl upload --launch-name "CI test" D:\a\AllureTest\AllureTest\build\allure-results
 
   build-linux:
@@ -76,6 +77,7 @@ jobs:
     - name: Testing
       run: |
         python -m pytest --cov=fastvector tests
+        python -m pytest --alluredir allure-results --clean-alluredir
         python -m codecov
         allurectl upload --launch-name "CI test" /home/runner/work/AllureTest/AllureTest/build/allure-results
 
@@ -97,5 +99,6 @@ jobs:
     - name: Testing
       run: |
         python -m pytest tests
+        python -m pytest --alluredir allure-results --clean-alluredir
         allurectl upload --launch-name "CI test" /Users/runner/work/AllureTest/AllureTest/build/allure-results
         
